# anime

./: package.json
src-tauri/lib/bangumi-api/: Cargo.toml  README.md
src-tauri/lib/bangumi-api/.openapi-generator/: FILES
src-tauri/lib/bangumi-api/docs/: Avatar.md  BloodType.md  Character.md  CharacterPerson.md  CharacterRevision.md  CharacterRevisionDataItem.md  CharacterType.md  Collection.md  Count.md  Creator.md  DefaultApi.md  Detail.md  DetailOneOf.md  DetailedRevision.md  EpType.md  Episode.md  EpisodeCollectionType.md  EpisodeDetail.md  ErrorDetail.md  GetCalendar200ResponseInner.md  GetCalendar200ResponseInnerWeekday.md  GetMyself200Response.md  GetUserSubjectEpisodeCollection200Response.md  Images.md  Index.md  IndexBasicInfo.md  IndexSubject.md  IndexSubjectAddInfo.md  IndexSubjectEditInfo.md  Item.md  Kv.md  LegacyBlog.md  LegacyCharacter.md  LegacyEpisode.md  LegacyEpisodeType.md  LegacyMono.md  LegacyMonoBase.md  LegacyMonoBaseImages.md  LegacyMonoInfo.md  LegacyMonoInfoAlias.md  (+73 more)
src-tauri/lib/bangumi-api/src/apis/: configuration.rs  default_api.rs
src-tauri/lib/bangumi-api/src/models/: avatar.rs  blood_type.rs  character.rs  character_person.rs  character_revision.rs  character_revision_data_item.rs  character_type.rs  collection.rs  count.rs  creator.rs  detail.rs  detail_one_of.rs  detailed_revision.rs  ep_type.rs  episode.rs  episode_collection_type.rs  episode_detail.rs  error_detail.rs  get_calendar_200_response_inner.rs  get_calendar_200_response_inner_weekday.rs  get_myself_200_response.rs  get_user_subject_episode_collection_200_response.rs  (+91 more)
(+39 files in other folders)
